Stock table dan style add PO DO PR

--- a/Klinik.Web/Views/PurchaseOrderPusat/CreateOrEditPurchaseOrderPusat.cshtml
+++ b/Klinik.Web/Views/PurchaseOrderPusat/CreateOrEditPurchaseOrderPusat.cshtml
@@ -108,10 +108,10 @@
                 <input type="text" hidden id="VendorId" />
                 <div class="row">
                     <div class="col-md-3">
-                        <select id="namabarang" class="form-control" style="width:230px"></select>
+                        <select id="namabarang" class="form-control"></select>
                     </div>
                     <div class="col-md-3">
-                        <select id="namavendor" class="form-control" style="width:230px"></select>
+                        <select id="namavendor" class="form-control"></select>
                     </div>
                     <div class="col-md-3">
                         <input type="text" class="form-control" placeholder="satuan" id="satuan" value="" />
