--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -92,7 +92,7 @@
                 <input type="text" hidden id="ProductId" />
                 <div class="row">
                     <div class="col-md-3">
-                        <select id="namabarang" class="form-control" style="width:230px"></select>
+                        <select id="namabarang" class="form-control"></select>
                     </div>
                     <div class="col-md-3">
                         <input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" />
